--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>BNJ Pressure Washing</title>
     <style>
         :root {
-            --primary-color: #2a9d8f; /* Customize colors here */
-            --secondary-color: #e9c46a;
-            --text-color: #264653;
+            --primary-color: #0056b3; /* Theme color */
+            --secondary-color: #000000; /* Black for strong contrast */
+            --text-color: white;
             --background-color: #f4f4f4;
         }
 
@@ -22,45 +22,62 @@
 
         header {
             background-color: var(--primary-color);
-            color: white;
+            color: var(--text-color);
             text-align: center;
             padding: 1rem 0;
         }
 
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: var(--secondary-color);
+            padding: 0.5rem 0;
+        }
+
+        nav a {
+            color: var(--text-color);
+            margin: 0 1rem;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
         section {
             padding: 2rem;
-            margin: 1rem;
+            margin: 1rem auto;
             border-radius: 8px;
             background-color: white;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
         }
 
         h1, h2 {
             color: var(--primary-color);
         }
 
-        .section-title {
+        .team-section {
             text-align: center;
-        }
-
-        .team-section, .pricing-section, .contact-section {
-            margin-bottom: 2rem;
-        }
-
-        .team-members {
-            display: flex;
-            justify-content: space-around;
         }
 
         .team-member {
-            text-align: center;
+            margin-bottom: 1rem;
+        }
+
+        .pricing-section img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 1rem auto;
         }
 
         .button {
             display: inline-block;
             padding: 0.5rem 1rem;
             color: white;
-            background-color: var(--secondary-color);
+            background-color: var(--primary-color);
             border: none;
             border-radius: 4px;
             text-decoration: none;
@@ -68,7 +85,20 @@
         }
 
         .button:hover {
-            background-color: var(--primary-color);
+            background-color: var(--secondary-color);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: var(--secondary-color);
+            color: var(--text-color);
+        }
+
+        iframe {
+            border: none;
+            width: 100%;
+            height: 600px;
         }
     </style>
 </head>
@@ -78,42 +108,47 @@
         <p>Professional cleaning services you can trust!</p>
     </header>
 
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#info">Info</a>
+        <a href="#schedule">Schedule</a>
+    </nav>
+
     <main>
-        <section class="team-section">
-            <h2 class="section-title">Meet Our Team</h2>
-            <div class="team-members">
-                <div class="team-member">
-                    <h3>Bob</h3>
-                    <p>Specialist in residential cleaning.</p>
-                </div>
-                <div class="team-member">
-                    <h3>Nancy</h3>
-                    <p>Expert in commercial projects.</p>
-                </div>
-                <div class="team-member">
-                    <h3>Joe</h3>
-                    <p>Your go-to for tough stains and more!</p>
-                </div>
+        <section id="home" class="team-section">
+            <h2>Meet Our Team</h2>
+            <div class="team-member">
+                <h3>Brandon</h3>
+                <p>Specialist in residential cleaning.</p>
+            </div>
+            <div class="team-member">
+                <h3>Nathan</h3>
+                <p>Expert in commercial projects.</p>
+            </div>
+            <div class="team-member">
+                <h3>Justin</h3>
+                <p>Your go-to for tough stains and more!</p>
             </div>
         </section>
 
-        <section class="pricing-section">
-            <h2 class="section-title">Our Pricing</h2>
+        <section id="info" class="pricing-section">
+            <h2>Our Pricing and Work</h2>
             <p><strong>Driveway Cleaning:</strong> Starting at $100</p>
             <p><strong>Deck Washing:</strong> Starting at $150</p>
             <p><strong>Full House Exterior:</strong> Starting at $300</p>
-            <p>Contact us for a custom quote tailored to your needs!</p>
+            <img src="/mnt/data/e681cb0b-0d12-40ae-8c74-3e78338300d2.png" alt="BNJ Pressure Washing Work">
         </section>
 
-        <section class="contact-section">
-            <h2 class="section-title">Get a Quote</h2>
-            <p>Fill out the form below to get in touch with us. Your request will be sent directly to our Google Sheets.</p>
-            <a href="https://tally.so/r/your-tally-form-link" target="_blank" class="button">Fill Out the Form</a>
+        <section id="schedule" class="contact-section">
+            <h2>Schedule a Service</h2>
+            <p>Fill out the form below to book our services:</p>
+            <iframe src="https://tally.so/embed/YOUR-TALLY-FORM-ID" allowfullscreen></iframe>
         </section>
     </main>
 
-    <footer style="text-align: center; padding: 1rem; background-color: var(--secondary-color); color: white;">
+    <footer>
         <p>&copy; 2025 BNJ Pressure Washing. All rights reserved.</p>
+        <p>Call us: 770-238-7736</p>
     </footer>
 </body>
 </html>
