--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>BNJ Pressure Washing</title>
     <style>
         :root {
-            --primary-color: #0056b3; /* Theme color */
-            --secondary-color: #000000; /* Black for strong contrast */
-            --text-color: white;
+            --primary-color: #0056b3;
+            --secondary-color: #000000;
+            --text-color: #ffffff;
             --background-color: #f4f4f4;
+            --card-background-color: #ffffff;
+            --text-secondary-color: #333333;
         }
 
         body {
@@ -17,7 +19,7 @@
             margin: 0;
             padding: 0;
             background-color: var(--background-color);
-            color: var(--text-color);
+            color: var(--text-secondary-color);
         }
 
         header {
@@ -49,7 +51,7 @@
             padding: 2rem;
             margin: 1rem auto;
             border-radius: 8px;
-            background-color: white;
+            background-color: var(--card-background-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             max-width: 800px;
         }
@@ -58,47 +60,11 @@
             color: var(--primary-color);
         }
 
-        .team-section {
-            text-align: center;
-        }
-
-        .team-member {
-            margin-bottom: 1rem;
-        }
-
-        .pricing-section img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 1rem auto;
-        }
-
-        .button {
-            display: inline-block;
-            padding: 0.5rem 1rem;
-            color: white;
-            background-color: var(--primary-color);
-            border: none;
-            border-radius: 4px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .button:hover {
-            background-color: var(--secondary-color);
-        }
-
         footer {
             text-align: center;
             padding: 1rem;
             background-color: var(--secondary-color);
             color: var(--text-color);
-        }
-
-        iframe {
-            border: none;
-            width: 100%;
-            height: 600px;
         }
     </style>
 </head>
@@ -109,42 +75,10 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#info">Info</a>
-        <a href="#schedule">Schedule</a>
+        <a href="index.html">Home</a>
+        <a href="info.html">Info</a>
+        <a href="schedule.html">Schedule</a>
     </nav>
-
-    <main>
-        <section id="home" class="team-section">
-            <h2>Meet Our Team</h2>
-            <div class="team-member">
-                <h3>Brandon</h3>
-                <p>Specialist in residential cleaning.</p>
-            </div>
-            <div class="team-member">
-                <h3>Nathan</h3>
-                <p>Expert in commercial projects.</p>
-            </div>
-            <div class="team-member">
-                <h3>Justin</h3>
-                <p>Your go-to for tough stains and more!</p>
-            </div>
-        </section>
-
-        <section id="info" class="pricing-section">
-            <h2>Our Pricing and Work</h2>
-            <p><strong>Driveway Cleaning:</strong> Starting at $100</p>
-            <p><strong>Deck Washing:</strong> Starting at $150</p>
-            <p><strong>Full House Exterior:</strong> Starting at $300</p>
-            <img src="/mnt/data/e681cb0b-0d12-40ae-8c74-3e78338300d2.png" alt="BNJ Pressure Washing Work">
-        </section>
-
-        <section id="schedule" class="contact-section">
-            <h2>Schedule a Service</h2>
-            <p>Fill out the form below to book our services:</p>
-            <iframe src="https://tally.so/embed/YOUR-TALLY-FORM-ID" allowfullscreen></iframe>
-        </section>
-    </main>
 
     <footer>
         <p>&copy; 2025 BNJ Pressure Washing. All rights reserved.</p>
