--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Herbivore Haven</title>
+    <title>BNJ Pressure Washing/title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <img src="images/your-logo.png" alt="Logo">
+            <img src="images/bnjlogo.png" alt="Logo">
         </div>
         <nav>
             <ul>
@@ -36,18 +36,18 @@
                 Herbivore Haven
             </div>
             <div class="social-icons">
-                <a href="https://instagram.com/yourprofile" target="_blank">
+                <a href="https://instagram.com/bnj.pressurewashing" target="_blank">
                     <img src="images/instagram-icon.png" alt="Instagram">
                 </a>
-                <a href="https://tiktok.com/@yourprofile" target="_blank">
+                <a href="https://tiktok.com/@bnj.pressurewashing" target="_blank">
                     <img src="images/tiktok-icon.png" alt="TikTok">
                 </a>
-                <a href="https://youtube.com/yourchannel" target="_blank">
+                <a href="https://youtube.com/BNJPressureWashing" target="_blank">
                     <img src="images/youtube-icon.png" alt="YouTube">
                 </a>
             </div>
             <div class="footer-rights">
-                © 2025 Herbivore Haven
+                © 2025 BNJ Pressure Washing
             </div>
         </div>
     </footer>
